# LoggerApp

./: CMakeLists.txt  LoggerClass.cpp  LoggerClass.h  LoggerConfig.cpp  LoggerConfig.h  TestClass.cpp  TestClass.h  loggerapp-exports.h  main.cpp
